--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,3 @@
 # Auto detect text files and perform LF normalization
 * text=auto
-wwwroot/lib/* linguist-vendored
+Shop.UI/wwwroot/lib/* linguist-vendored
